* Add spec that it is possible to supply data and title to Router.navigate