@@ -10,6 +10,16 @@ var staterouter = (function () {
         return path;
     }
 
+    // Get path component of the current URL
+    function getCurrentPath(state) {
+        var link = document.createElement("a");
+        if (state === undefined) {
+            state = History.getState();
+        }
+        link.href = state.url;
+        return normalizePath(link.pathname);
+    }
+
     function Router() {
         var self = this;
         self.routes = {};
@@ -23,8 +33,17 @@ var staterouter = (function () {
             return self;
         };
 
+        // Navigate to a path
         self.navigate = function (path, state, title) {
-            path = normalizePath(path);
+            if (path[0] !== '/') {
+                // Make absolute path
+                var currentPath = getCurrentPath();
+                if (currentPath.slice(-1)[0] !== '/') {
+                    currentPath += '/';
+                }
+                path = currentPath + path;
+            }
+            console.log('Navigating to ' + path);
             History.pushState(state, title, path);
             return self;
         };
@@ -32,19 +51,16 @@ var staterouter = (function () {
         self.perform = function () {
             var state = History.getState(),
                 // Get pathname part of URL, which is what we'll be matching
-                link = document.createElement("a"),
-                url,
+                path = getCurrentPath(state),
                 route,
                 rx,
                 match,
                 func;
-            link.href = state.url;
-            url = normalizePath(link.pathname);
             for (route in self.routes) {
                 if (self.routes.hasOwnProperty(route)) {
                     rx = new RegExp(route);
-                    match = rx.exec(url);
-                    //console.log("Route " + route + ", " + url + ", match: " + match);
+                    match = rx.exec(path);
+                    //console.log("Route " + route + ", " + path + ", match: " + match);
                     if (match !== null) {
                         // Translate groups to parameters
                         func = self.routes[route];
